Name:                turbinado
Version:             0.2
Synopsis:            Haskell web application server
Description:         The Haskell web application server
License:             BSD3
License-file:        LICENSE
Author:              Alson Kemp
Maintainer:          Alson Kemp (alson@alsonkemp.com)
Homepage:            http://www.turbinado.org
Build-Type:          Simple
Cabal-Version:          >= 1.2

Executable trhaml
  Main-is:             Turbinado/View/HAML/trhaml.hs
  Build-Depends:       base  < 4.0,
                       parsec 
  ghc-options:  -O

Executable turbinado
  Main-is:             Turbinado/Server.hs
  Build-Depends:       base <4.0, 
                       containers, 
                       directory, 
                       filepath, 
                       harp == 0.4, 
                       HDBC, 
                       HDBC-postgresql, 
                       hslogger, 
                       hsx == 0.4.5, 
                       HTTP < 4000, 
                       mtl, 
                       network, 
                       old-locale, 
                       old-time, 
                       parsec, 
                       plugins, 
                       pretty, 
                       regex-compat, 
                       time
  ghc-options: -F -pgmFtrhsx -O
  Extensions: MultiParamTypeClasses,
            FunctionalDependencies,
            TypeFamilies,
            RankNTypes,
            PolymorphicComponents,
            ExistentialQuantification,
            FlexibleContexts,
            FlexibleInstances,
            EmptyDataDecls,
            CPP,
            TypeSynonymInstances,
            OverlappingInstances,
            UndecidableInstances,
            PatternGuards,
            MultiParamTypeClasses,
            PatternSignatures,
            DeriveDataTypeable


