Name:                turbinado
Version:             0.6.0
Synopsis:            Haskell web application server
Description:         The Haskell web application server
License:             BSD3
License-file:        LICENSE
Author:              Alson Kemp
Maintainer:          Alson Kemp (alson@alsonkemp.com)
Homepage:            http://www.turbinado.org
Build-Type:          Simple
Cabal-Version:          >= 1.6

Executable turbinado
  Main-is:             Turbinado/Server.hs
  Build-Depends:       base >= 4, 
                       containers, 
                       Crypto > 4.1.0, 
                       dataenc,
                       directory, 
                       harp == 0.4,
                       filepath,
                       haskell-src-exts == 0.4.8,
                       HDBC >= 2, 
                       HDBC-postgresql >= 2,
                       hslogger, 
                       hsx == 0.4.8, 
                       HTTP < 4000, 
                       mtl, 
                       network, 
                       old-locale, 
                       old-time, 
                       plugins >= 1.4,
                       parsec, 
                       pretty, 
                       regex-compat, 
                       time
  ghc-options: -F -pgmFtrhsx
  Extensions: MultiParamTypeClasses,
            FunctionalDependencies,
            TypeFamilies,
            RankNTypes,
            PolymorphicComponents,
            ExistentialQuantification,
            FlexibleContexts,
            FlexibleInstances,
            EmptyDataDecls,
            CPP,
            TypeSynonymInstances,
            OverlappingInstances,
            UndecidableInstances,
            PatternGuards,
            MultiParamTypeClasses,
            ScopedTypeVariables,
            DeriveDataTypeable


