Name:		encoding
Version:	0.4.1
Author:		Henning Günther
Maintainer:	h.guenther@tu-bs.de
License:	BSD3
Synopsis:	A library for various character encodings
Stability:	alpha
Description:
	Haskell has excellect handling of unicode, the Char type covers all unicode chars. Unfortunatly, there's no possibility to read or write something to the outer world in an encoding other than ascii due to the lack of support for encodings. This library should help with that.
Category:	Codec
Homepage:	http://code.haskell.org/encoding/
Cabal-Version:	>=1.2
Build-Type:	Simple
Extra-Source-Files:
  8859-2.TXT
  8859-3.TXT
  8859-4.TXT
  8859-5.TXT
  8859-6.TXT
  8859-7.TXT
  8859-8.TXT
  8859-9.TXT
  8859-10.TXT
  8859-11.TXT
  8859-13.TXT
  8859-14.TXT
  8859-15.TXT
  8859-16.TXT
  CP1250.TXT
  CP1251.TXT
  CP1252.TXT
  CP1253.TXT
  CP1254.TXT
  CP1255.TXT
  CP1256.TXT
  CP1257.TXT
  CP1258.TXT
  gb-18030-2000.xml
  system_encoding.h
  create_gb18030_data.sh
  NEWS

Flag splitBase
  description:	Choose the new smaller, split-up base package.

Library
  if flag(splitBase)
    Build-Depends:	bytestring, base >= 3, template-haskell, containers, array, regex-compat
  else
    Build-Depends:	base < 3, template-haskell, regex-compat
  Extensions:	TemplateHaskell,CPP,ExistentialQuantification,ForeignFunctionInterface
  C-Sources:	system_encoding.c
  Include-Dirs:	.
  Install-Includes:	system_encoding.h
  Exposed-Modules:
    Data.Encoding
    Data.Encoding.ASCII
    Data.Encoding.UTF8
    Data.Encoding.UTF16
    Data.Encoding.UTF32
    Data.Encoding.ISO88591
    Data.Encoding.ISO88592
    Data.Encoding.ISO88593
    Data.Encoding.ISO88594
    Data.Encoding.ISO88595
    Data.Encoding.ISO88596
    Data.Encoding.ISO88597
    Data.Encoding.ISO88598
    Data.Encoding.ISO88599
    Data.Encoding.ISO885910
    Data.Encoding.ISO885911
    Data.Encoding.ISO885913
    Data.Encoding.ISO885914
    Data.Encoding.ISO885915
    Data.Encoding.ISO885916
    Data.Encoding.BootString
    Data.Encoding.CP1250
    Data.Encoding.CP1251
    Data.Encoding.CP1252
    Data.Encoding.CP1253
    Data.Encoding.CP1254
    Data.Encoding.CP1255
    Data.Encoding.CP1256
    Data.Encoding.CP1257
    Data.Encoding.CP1258
    Data.Encoding.KOI8R
    Data.Encoding.KOI8U
    Data.Encoding.GB18030
    System.IO.Encoding
  Other-Modules:
    Data.Encoding.Base
    Data.Encoding.GB18030Data
    Data.Encoding.Helper.Template

