Name:                   harp
Version:                0.4
License:                BSD4
License-File:           LICENSE
Author:                 Niklas Broberg
Maintainer:             Niklas Broberg <nibro@cs.chalmers.se>

Stability:              Experimental
Category:               Language
Synopsis:               HaRP allows pattern-matching with regular expressions
Description:            HaRP, or Haskell Regular Patterns, is a Haskell extension
                        that extends the normal pattern matching facility with
                        the power of regular expressions. This expressive power
                        is highly useful in a wide range of areas, including text parsing
                        and XML processing. Regular expression patterns in HaRP work over
                        ordinary Haskell lists ([]) of arbitrary type. We have implemented
                        HaRP as a pre-processor to ordinary Haskell.
                        .
                        For details on usage, please see the website.
Homepage:               http://www.cs.chalmers.se/~d00nibro/harp/

Build-Depends:          base
Build-Type:             Simple
Tested-With:            GHC==6.8.3

Exposed-modules:        Harp.Match
