Name: HDBC-postgresql
Version: 1.1.4.1
License: LGPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Copyright: Copyright (c) 2005-2008 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING, hdbc-postgresql-helper.h, pgtypes.h
homepage: http://software.complete.org/hdbc-postgres
Category: Database
synopsis: PostgreSQL driver for HDBC
Description: This package provides a PostgreSQL driver for HDBC
Stability: Stable

Build-Type: Custom
Cabal-Version: >=1.2 && < 1.3

Flag splitBase
  description: Choose the new smaller, split-up package.

Library
  Exposed-Modules: Database.HDBC.PostgreSQL
  Other-Modules: Database.HDBC.PostgreSQL.Connection,
    Database.HDBC.PostgreSQL.ConnectionImpl,
    Database.HDBC.PostgreSQL.Statement,
    Database.HDBC.PostgreSQL.Types,
    Database.HDBC.PostgreSQL.Utils,
    Database.HDBC.PostgreSQL.Parser,
    Database.HDBC.PostgreSQL.PTypeConv
  --Extensions: ExistentialQuantification, AllowOverlappingInstances,
  --    AllowUndecidableInstances, CPP
  Extensions: ExistentialQuantification, ForeignFunctionInterface
  Build-Depends: base, mtl, HDBC>=1.1.0, parsec, encoding, bytestring
  if flag(splitBase)
    Build-Depends: base >= 3, old-time
  else
    Build-Depends: base < 3
  Extra-Libraries: pq
  C-Sources: hdbc-postgresql-helper.c
  Include-Dirs: .
