Name: hslogger
Version: 1.0.6
License: LGPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Stable
Copyright: Copyright (c) 2004-2008 John Goerzen
license-file: COPYRIGHT
build-type: Simple
Homepage: http://software.complete.org/hslogger
Synopsis: Versatile logging framework
Description:  hslogger is a logging framework for Haskell, roughly similar to
 Python's logging module.
 .
 hslogger lets each log message have a priority and source be associated
 with it.  The programmer can then define global handlers that route
 or filter messages based on the priority and source.  hslogger also
 has a syslog handler built in.
Category: Interfaces
extra-source-files: COPYING,
    contrib/java/build.xml,
    contrib/java/hslogger4j.jar,
    contrib/java/hslogger4j-plugins.xml,
    contrib/java/org/haskell/hslogger/HsloggerLevel.java,
    contrib/java/org/haskell/hslogger/LogFileXMLReceiver.java,
    contrib/java/org/haskell/hslogger/XMLDecoder.java
Cabal-Version: >= 1.2

flag small_base
  description: choose the new smaller, split-up base package.

Library
    Exposed-Modules: 
      System.Log, System.Log.Handler,
        System.Log.Handler.Simple, System.Log.Handler.Syslog,
        System.Log.Handler.Growl, System.Log.Handler.Log4jXML,
        System.Log.Logger
    Extensions: CPP, ExistentialQuantification
    Build-Depends: network, mtl
    if !os(windows)
        Build-Depends: unix
    if flag(small_base)
        build-depends: base >= 3, containers, directory, process,
                       time, old-locale
    else
        build-depends: base < 3, time
    GHC-Options: -O2
    Hs-Source-Dirs: src

Executable runtests
    Buildable: False
    Main-Is: runtests.hs
    HS-Source-Dirs: testsrc, .
    Extensions: ExistentialQuantification, OverlappingInstances,
        UndecidableInstances, CPP
