Name:               HTTP
Version:            3001.1.4
Cabal-Version:      >= 1.2
Build-type:         Simple
License:            BSD3
License-file:       LICENSE
Category:           Network
Copyright:
  Copyright (c) 2002, Warrick Gray
  Copyright (c) 2002-2005, Ian Lynagh
  Copyright (c) 2003-2006, Bjorn Bringert
  Copyright (c) 2004, Andre Furtado
  Copyright (c) 2004, Ganesh Sittampalam
  Copyright (c) 2004-2005, Dominic Steinitz
  Copyright 2007 Robin Bate Boerop
Author:             Warrick Gray <warrick.gray@hotmail.com>
Maintainer:         Bjorn Bringert <bjorn@bringert.net>
Homepage:           http://www.haskell.org/http/
Description:        A library for client-side HTTP
Synopsis:           A library for client-side HTTP 

Flag old-base
  description: Old, monolithic base
  default: False

Library
  Exposed-modules: 
                 Network.Stream,
                 Network.StreamDebugger,
                 Network.StreamSocket,
                 Network.TCP,                
                 Network.HTTP,
                 Network.HTTP.Headers,
                 Network.Browser
  Other-modules:
                 Network.HTTP.Base64,
                 Network.HTTP.MD5,
                 Network.HTTP.MD5Aux
  GHC-options: -fwarn-missing-signatures
  Extensions: DeriveDataTypeable
  Build-depends: network, parsec

  if flag(old-base)
    Build-depends: base < 3
  else
    Build-depends: base >= 3 && < 4, array
