Name:               utf8-string
Version:            0.3.3
Author:             Eric Mertens
Maintainer:         emertens@galois.com
License:            BSD3
License-file:       LICENSE
Homepage:           http://github.com/glguy/utf8-string/
Synopsis:           Support for reading and writing UTF8 Strings
Description:        A UTF8 layer for IO and Strings. The utf8-string
                    package provides operations for encoding UTF8
                    strings to Word8 lists and back, and for reading and
                    writing UTF8 without truncation.
Category:           Codec
Build-type:         Simple
cabal-version:      >= 1.2

flag bytestring-in-base

library
  Ghc-options:        -W -O2

  if flag(bytestring-in-base)
    build-depends: base >= 2.0 && < 2.2
  else
    build-depends: base < 2.0 || >= 3, bytestring >= 0.9

  Exposed-modules:    Codec.Binary.UTF8.String
                      Codec.Binary.UTF8.Generic
                      System.IO.UTF8
                      Data.String.UTF8
                      Data.ByteString.UTF8
                      Data.ByteString.Lazy.UTF8
